--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -25,14 +25,24 @@
     display: flex;
     gap:2rem;
     margin-right: 4rem;
+    cursor: pointer;
+    
 }
 .n-list>ul>li:hover{
     cursor: pointer;
     color: var(--orange);
-
+    color: var(--orange);
 }
 .n-button{
     flex: 2;
     
+}
+@media screen and (max-width:480px){
+    .n-list{
+        display: none;
+    }
+    .n-button{
+        display: none;
+    }
 }
 
