--- a/src/components/Works/Works.css
+++ b/src/components/Works/Works.css
@@ -76,3 +76,23 @@ left: -3rem;
     left: 18rem;
     top: 8rem;
 }
+@media screen and (max-width:480px){
+    .works{
+        flex-direction: column;
+        height: 55rem;
+        padding: 0;
+        gap: 5rem;
+    }
+    .w-right{
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        transform: scale(0.7);
+    }
+    .w-mainCircle{
+        position: static;
+    }
+    .w-backCircle{
+        left: 8rem !important;
+    }
+}
